force-app/main/default/objects/refedge__Reference_Refresh__c/fields/refedge__Quarantined__c.field-meta.xml
<CustomField>
    <fullName>refedge__Quarantined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quarantined</label>
    <type>Checkbox</type>
</CustomField>