force-app/main/default/objects/refedge__Reference_Refresh__c/fields/refedge__Reference_Profile__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Profile</label>
    <referenceTo>refedge__Reference_Basic_Information__c</referenceTo>
    <relationshipName>Reference_Refreshs</relationshipName>
    <type>Lookup</type>
</CustomField>