force-app/main/default/objects/refedge__Reference_Refresh__c/fields/refedge__Reference_Refresh_Owner__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Refresh_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profile Update Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Refreshs</relationshipName>
    <type>Lookup</type>
</CustomField>