force-app/main/default/objects/refedge__Reference_Refresh__c/fields/refedge__Reference_Refresh_Status__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Refresh_Status__c</fullName>
    <label>Profile Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Request Pending</fullName>
            </value>
            <value>
                <fullName>Request Sent</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Profile Updated</fullName>
            </value>
            <value>
                <fullName>Profile Update Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>