force-app/main/default/objects/refedge__Reference_Refresh__c/listViews/refedge__All.listView-meta.xml
<ListView>
    <fullName>refedge__All</fullName>
    <columns>NAME</columns>
    <columns>refedge__Reference_Account__c</columns>
    <columns>refedge__Reference_Profile__c</columns>
    <columns>refedge__Reference_Refresh_Status__c</columns>
    <columns>refedge__Reference_Refresh_Owner__c</columns>
    <columns>refedge__Quarantined__c</columns>
    <columns>refedge__Is_Active__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>